# backend/src/routes/userRoutes.js
@@ -5,11 +5,17 @@ const {
     newUser,
     userLogin,
     logout,
-    logoutAll
+    logoutAll,
+    forgotPass,
+    verifyOtp,
+    newPass
 } = require('../controllers/userController');
 
 router.post('/newUser', newUser);
 router.post('/userLogin', userLogin);
 router.get('/logout', authentication.verifyToken, logout);
 router.get('/logoutAll', authentication.verifyToken, logoutAll);
+router.post('/forgotPass', forgotPass);
+router.post('/verifyOtp', verifyOtp);
+router.post('/newPass', newPass);
 module.exports = router;
